# netbox-branching

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPATIBILITY.md  LICENSE.md  Makefile  NOTICE.txt  README.md  SECURITY.md  mkdocs.yml  netbox-plugin.yaml  performance_tracker.md  pyproject.toml  ruff.toml  setup.py
.claude/: README.md
.claude/skills/run-tests/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  lint-tests.yml
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  03-documentation_change.yaml  04-housekeeping.yaml  bug_report.yaml  feature_request.yaml
.github/workflows/: claude.yaml  claude.yml  lint-tests.yaml  lint-tests.yml  release-validation.yml  release.yaml  release.yml
.hooks/: mkdocs-build.sh
docker/: docker-compose.yaml  local_settings.py
docker/configuration/: configuration.py  local_settings.py  plugins.py
docker/configuration/ldap/: ldap_config.py
docker/env/: netbox.env
docs/: best-practices.md  changelog.md  configuration.md  event-rules.md  index.md  netbox-docker.md  plugin-development.md  rest-api.md
docs/models/: branch.md  branchevent.md  changediff.md  objectchange.md
docs/using-branches/: creating-a-branch.md  reverting-a-branch.md  syncing-merging.md
netbox_branching/: __init__.py  backends.py  choices.py  collapse_merge.py  constants.py  database.py  error_report.py  events.py  filtersets.py  jobs.py  middleware.py  models.py  navigation.py  object_actions.py  provisioning.py  script_context_manager.py  search.py  signal_receivers.py  signals.py  template_content.py  urls.py  utilities.py  views.py  webhook_callbacks.py
netbox_branching/api/: serializers.py  urls.py  views.py
netbox_branching/forms/: bulk_edit.py  bulk_import.py  filtersets.py  misc.py  model_forms.py
netbox_branching/management/commands/: merge_branch.py  migrate.py
netbox_branching/merge_strategies/: __init__.py  iterative.py  squash.py  strategy.py
netbox_branching/migrations/: 0001_initial.py  0002_branch_rename_user_to_owner.py  0002_branch_schema_id_unique.py  0003_branch_cloning.py  0003_branchevent_related_branch.py  0003_changediff_add_object_repr.py  0003_copy_migrations.py  0003_rename_indexes.py  0004_branchevent.py  0004_copy_migrations.py  0004_rename_indexes.py  0005_branch_applied_migrations.py  0005_branchevent_related_branch.py  0006_tag_object_types.py  0007_branch_merge_strategy.py  0007_branch_merged_using_collapsed.py  0008_branch_custom_permissions.py  0009_changediff_last_updated_auto_now.py
netbox_branching/models/: __init__.py  branches.py  changes.py
netbox_branching/tables/: columns.py  tables.py  template_code.py
netbox_branching/templates/netbox_branching/: branch.html  branch_action.html  branch_archive.html  branch_bulk_migrate.html  branch_job_report.html  branch_migrate.html  branch_replay.html  changediff.html
netbox_branching/templates/netbox_branching/buttons/: branch_archive.html  branch_merge.html  branch_migrate.html  branch_pull.html  branch_replay.html  branch_revert.html  branch_sync.html  bulk_migrate.html
netbox_branching/templates/netbox_branching/inc/: branch_selector.html  branch_warning.html  (+3 more)
netbox_branching/templatetags/: branch_buttons.py  branch_filters.py  filters.py
netbox_branching/tests/: query_counts.json  test_api.py  test_branches.py  test_branching_resolver.py  test_changediff.py  test_config.py  test_connection_lifecycle.py  test_database.py  test_error_report.py  test_events.py  test_filtersets.py  test_iterative_merge.py  test_jobs.py  test_merge.py  test_objectchange_field_migrator.py  test_query.py  test_related_models.py  test_request.py  test_resolve_field_aliases.py  test_signals.py  test_squash_merge.py  test_sync.py  test_upgrade.py  test_validation_errors.py  test_views.py  test_webhook_callbacks.py  utils.py
netbox_vcs/: __init__.py  choices.py  constants.py  contextvars.py  database.py  filtersets.py  forms.py  jobs.py  middleware.py  models.py  navigation.py  search.py  signals.py  tables.py  template_content.py  todo.py  urls.py  utilities.py  views.py
netbox_vcs/api/: serializers.py  urls.py  views.py
netbox_vcs/forms/: __init__.py  bulk_edit.py  bulk_import.py  filtersets.py  misc.py  model_forms.py
netbox_vcs/migrations/: 0001_initial.py  0002_changediff.py
netbox_vcs/tables/: tables.py
netbox_vcs/templates/netbox_vcs/: branch.html  context.html  context_diff.html  context_replay.html
netbox_vcs/tests/: test_api.py  test_branches.py  test_contexts.py  test_query.py  test_request.py  test_views.py  utils.py
testing/: configuration.py  local_settings.py
(+3 files in other folders)
