[project]
name = "netboxlabs-netbox-branching"
version = "0.8.0"
description = "A git-like branching implementation for NetBox"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NetBox Limited Use License 1.0" }
authors = [
    { name = "NetBox Labs", email = "support@netboxlabs.com" }
]
maintainers = [
    { name = "NetBox Labs", email = "support@netboxlabs.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    "Django",
]

[project.optional-dependencies]
dev = ["check-manifest", "mkdocs", "mkdocs-material", "ruff"]
test = ["coverage", "pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://netboxlabs.com/"

[project.scripts]

[tool.setuptools]
packages = [
    "netbox_branching",
]
package-data = { "netbox_branching" = ["**/*", "templates/**"] }
exclude-package-data = { netbox_branching = ["tests/*"] }
license-files = ["LICENSE.md"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E1", "E2", "E3", "E501", "W"]
ignore = ["F403", "F405"]
preview = true

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
